# haking-code-

./: .gitignore  CLAUDE.md  CLI万能工具框架核心源码.txt  LEGAL.md  NEXT-VERSION.md  README.md  Yakit安全平台核心源码.txt  bailongma.bat  haking.bat  package.json  superpowers超能力技能库.txt  tsconfig.json
.github/workflows/: deploy-site.yml
island/: .gitignore  package.json
island/src/: index.html
island/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
island/src-tauri/capabilities/: default.json
island/src-tauri/src/: main.rs
scripts/: defines.ts  terminal-glass.ps1
site/: next.config.mjs  package-lock.json  package.json
src/: QueryEngine.ts  Tool.ts  commands.ts  dialogLaunchers.tsx  main.tsx  query.ts  replLauncher.tsx  tools.ts
src/algorithms/: vulnHunter.ts
src/bootstrap/: state.ts
src/buddy/: companion.ts
src/cli/: print.ts
src/commands/: brief.ts  insights.ts  statusline.tsx
src/components/: BashModeProgress.tsx  FileEditToolDiff.tsx  FullscreenLayout.tsx  HakingLayout.tsx  MessageSelector.tsx  Messages.tsx  Onboarding.tsx  ScrollKeybindingHandler.tsx  StatusNotices.tsx  TaskListV2.tsx
src/constants/: license.ts  prompts.ts  system.ts  tools.ts
src/coordinator/: coordinatorMode.ts  workerAgent.ts
src/entrypoints/: cli.tsx  init.ts
src/hooks/: unifiedSuggestions.ts  useCanUseTool.tsx  useDiffInIDE.ts  useGlobalKeybindings.tsx  useIssueFlagBanner.ts  useManagePlugins.ts  useScheduledTasks.ts  useTurnDiffs.ts  useTypeahead.tsx
src/keybindings/: defaultBindings.ts
src/memdir/: memdir.ts
src/query/: stopHooks.ts
wiki/: package.json  server.ts
(+316 files in other folders)
