[package]
name = "haking-island"
version = "1.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-positioner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
